dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@stream__reader__tests__server_send_reset_on_pending_reader.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 DEBUG grow epoch=8
0:00:00.000000000 DEBUG Sent FlowReset stream_id=1 error_code=42 reset_target=Both
0:00:00.000000000 DEBUG event=on_reset prev=PendingValidation next=Reset location=dc/s2n-quic-dc/src/stream/reader.rs:368:23
0:00:00.000000000 DEBUG Reader dropping stream_id=1 status=Reset final_size=None consumed_len=0 total_received_len=0 is_writing_complete=false is_reading_complete=false
