dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@stream__reader__tests__server_validate_idempotent_when_already_open.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 DEBUG grow epoch=8
0:00:00.000000000 DEBUG event=on_validated prev=PendingValidation next=Open location=dc/s2n-quic-dc/src/stream/reader.rs:729:44
0:00:00.000000000 DEBUG Flow validated stream_id=1
0:00:00.000000000 DEBUG Reader dropping stream_id=1 status=Open final_size=None consumed_len=0 total_received_len=0 is_writing_complete=false is_reading_complete=false
0:00:00.000000000 DEBUG Reader dropped before FIN received - sent STOP_SENDING stream_id=1
